fix: layout issues, team ready

--- a/src/style.scss
+++ b/src/style.scss
@@ -237,6 +237,8 @@ main {
 	}
 	&__member {
 		position: relative;
+		top: 100px;
+		margin: 0 auto;
 		z-index: 200;
 		width: 630px;
 		background-color: #fff;
@@ -272,6 +274,7 @@ main {
 		position: absolute;
 		top: 33px;
 		right: 34px;
+		cursor: pointer;
 	}
 }
 
@@ -293,11 +296,18 @@ h2 {
 		color: $blue1;
 		margin-bottom: 45px;
 	}
+	&__container {
+		width: 100%;
+		display: flex;
+		justify-content: space-between;
+	}
 	&__member {
+		border: 1px solid red;
 		width: 270px;
 		cursor: pointer;
 	}
 	&__member2 {
+		border: 1px solid red;
 		width: 271px;
 		cursor: pointer;
 	}
@@ -305,14 +315,19 @@ h2 {
 		margin-top: 4px;
 		margin-left: 70px;
 		margin-bottom: 16px;
+		margin-right: 69px;
 	}
 	&__img2 {
 		margin-top: 0;
 		margin-left: 66px;
 		margin-bottom: 15px;
+		margin-right: 70px
 	}
 	&__img4 {
+		margin-top: 4px;
 		margin-left: 69px;
+		margin-bottom: 16px;
+		margin-right: 70px;
 	}
 	&__name {
 		margin: 0 0 8px 0;
